--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
      "license": "ISC",
      "description": "",
      "dependencies": {
+           "aws-sdk": "^2.1692.0",
           "express": "^4.21.2",
           "pm2": "^5.4.3"
      }
