--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
      "description": "",
      "dependencies": {
            "aws-sdk": "^2.1692.0",
+           "axios": "^1.8.2",
           "express": "^4.21.2",
           "pm2": "^5.4.3"
      }
